# ixray-1.6-stcop

./: .clang-format  .gitignore  CMakeLists.txt  XRay.Editors.sln  XRay.Plugins.3dsMax.sln  fsgame.ltx  get-3dsmax-sdk.bat  get-3dsmax-sdk.ps1
src/: CMakeLists.txt
src/editor/: editor.vcxproj
src/editor_controls/: editor_controls.vcxproj
src/xrAppLayer/: CMakeLists.txt  ImGuiD3D11.cpp  ImGuiSDL.cpp  InitD3D11.cpp  InitD3D11.h  InitD3D9.h  pch.cpp  pch.h  xrAppLayer.cpp  xrAppLayer.h
src/xrCDB/: Frustum.cpp  Frustum.h  ISpatial_q_ray.cpp  xrCDB.vcxproj  xrCDB_frustum.cpp  xrCDB_ray.cpp
src/xrCPU_Pipe/: CMakeLists.txt  PLC.cpp  StdAfx.h  xrCPU_Pipe.cpp  xrCPU_Pipe.h  xrCPU_Pipe.vcxproj
src/xrCore/: ELocatorAPI.cpp  FS.cpp  FS.h  FS_internal.h  FixedMap.h  LocatorAPI.cpp  LocatorAPI_defs.h  _math.cpp  _std_extensions.h  _stl_extensions.h  buffer_vector_inline.h  cpuid.cpp  cpuid.h  log.cpp  log.h  memory_usage.cpp  string_concatenations.cpp  string_concatenations.h  vector.h  xrCore.cpp  xrCore.h  xrCore.vcxproj  xrCoreB.vcxproj  xrCoreStatic.vcxproj  xrDebug.cpp  xr_trims.cpp  xr_trims.h  xrstring.cpp
src/xrEngine/: CMakeLists.txt  CameraBase.h  CameraManager.cpp  CustomHUD.h  Device_Initialize.cpp  Device_Misc.cpp  Device_create.cpp  Device_destroy.cpp  Device_overdraw.cpp  Device_wndproc.cpp  Effector.h  EffectorPP.cpp  Engine.h  EngineAPI.cpp  EngineApplication.cpp  EngineApplication.h  Environment.cpp  FDemoPlay.cpp  FDemoRecord.cpp  FDemoRecord.h  Feel_Touch.cpp  GameFont.cpp  IGame_Level.cpp  IGame_Level.h  IGame_Level_check_textures.cpp  ObjectDump.cpp  (+36 more)
(+685 files in other folders)
